# open-agent

./: .env.example  .gitignore  LICENSE  README.md  SOUL.md  agent.py  docker-compose.yml  gitignore  install.sh  open-agent.py  pyproject.toml  requirements.txt
open_agent/: __init__.py  _impl.py  agent_loop.py  agent_runner.py  cli.py  hermes_state.py  skill_frontmatter.py  skills_index.py  skills_loader.py  thinking_logger.py  tool_cache.py  tui.py
open_agent/enhanced/: __init__.py  auto_retry.py  parallel_runner.py  schemas.py  tool_selector.py
open_agent/memory/: __init__.py  hierarchical.py
open_agent/tools/: __init__.py
pydantic-ai-skills/: AGENTS.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  sonar-project.properties
pydantic-ai-skills/docs/: advanced.md  concepts.md  contributing.md  creating-skills.md  index.md  patterns.md  programmatic-skills.md  quick-start.md  registries.md  security.md
pydantic-ai-skills/docs/api/: capability.md  exceptions.md  registries.md  toolset.md  types.md
pydantic-ai-skills/examples/: README.md  advanced_usage.py  basic_usage.py  basic_usage_capability.py  git_registry_usage.py  programatic_skills.py
pydantic-ai-skills/examples/skills/arxiv-search/: SKILL.md
pydantic-ai-skills/examples/skills/arxiv-search/scripts/: arxiv_search.py
pydantic-ai-skills/examples/skills/pydanticai-docs/: SKILL.md
pydantic-ai-skills/examples/skills/pydanticai-docs/references/: AGENT.md  DEPENDENCIES.md  FUNCTION_TOOLS.md  MCP.md  MESSAGES.md  MODELS.md  OUTPUT.md  TOOLS_AND_TOOLSETS.md
pydantic-ai-skills/pydantic_ai_skills/: __init__.py  capability.py  directory.py  exceptions.py  local.py  toolset.py  types.py
pydantic-ai-skills/pydantic_ai_skills/registries/: __init__.py  _base.py  combined.py  filtered.py  git.py  prefixed.py  renamed.py  wrapper.py
pydantic-ai-skills/tests/: test_capability.py  test_coverage_improvements.py  test_discovery.py  test_edge_cases.py  test_git_registry.py  test_local.py  test_parsing.py  test_programmatic_skills.py  test_registry_composition.py  test_reload.py  test_toolset.py  test_toolset_coverage.py  test_types.py  test_validation.py
scripts/: install.sh
skills/: brainstorm.md
skills/office/: SKILL.md
skills/productivity/: SKILL.md
skills/research/: SKILL.md
skills/software-development/: SKILL.md
skills/software-development/systematic-debugging/: SKILL.md
skills/software-development/test-driven-development/: SKILL.md
skills/software-development/writing-plans/: SKILL.md
skills/web-artifacts-builder/: SKILL.md
tests/: test_agent.py  test_memory.py  test_tools.py
